--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "eslint:fix": "eslint src --ext .js,jsx,.ts,.tsx --fix",
+    "prettier:fix": "prettier --check --write 'src/**/*.{js,jsx,ts,tsx,css,scss,md,mdx}'",
+    "format": "pnpm run eslint:fix && pnpm run prettier:fix"
   },
   "dependencies": {
     "@types/node": "18.15.10",
