--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@markuplint/jsx-parser": "^3.5.0",
+    "@markuplint/ml-core": "^3.5.0",
+    "@markuplint/react-spec": "^3.5.0",
     "@tsconfig/strictest": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
@@ -34,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "markuplint": "^3.5.0",
     "prettier": "^2.8.7"
   }
 }
