--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "@markuplint/jsx-parser": "^3.5.0",
     "@markuplint/ml-core": "^3.5.0",
     "@markuplint/react-spec": "^3.5.0",
+    "@testing-library/dom": "^9.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@tsconfig/strictest": "^1.0.2",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
@@ -41,6 +46,8 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "^3.10.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "markuplint": "^3.5.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
