--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "eslint:fix": "eslint src --ext .js,jsx,.ts,.tsx --fix",
     "prettier:fix": "prettier --check --write 'src/**/*.{js,jsx,ts,tsx,css,scss,md,mdx}'",
     "html:lint": "markuplint src/**/*.{html,jsx,tsx}",
-    "format": "pnpm run eslint:fix && pnpm run prettier:fix"
+    "format": "pnpm run eslint:fix && pnpm run prettier:fix",
+    "test": "jest --watch",
+    "test:coverage": "jest --collect-coverage"
   },
   "dependencies": {
     "@types/node": "18.15.10",
