--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.3",
     "@markuplint/jsx-parser": "^3.5.0",
     "@markuplint/ml-core": "^3.5.0",
     "@markuplint/react-spec": "^3.5.0",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^6.5.16",
     "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -39,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.2",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -55,6 +61,10 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.5",
-    "tailwindcss": "^3.2.7"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "require-from-string": "^2.0.2",
+    "tailwindcss": "^3.2.7",
+    "webpack": "^5.76.3"
   }
 }
