--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "@markuplint/jsx-parser": "^3.5.0",
     "@markuplint/ml-core": "^3.5.0",
     "@markuplint/react-spec": "^3.5.0",
+    "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
+    "@storybook/addons": "^6.5.16",
     "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/client-api": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@testing-library/dom": "^9.2.0",
@@ -66,6 +69,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "require-from-string": "^2.0.2",
+    "storybook-addon-next-router": "^4.0.2",
     "tailwindcss": "^3.2.7",
     "webpack": "^5.76.3"
   }
