--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/client-api": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/preview-web": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/testing-react": "^1.3.0",
