--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "daisyui": "^2.51.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "fast-deep-equal": "^3.1.3",
+    "jotai": "^2.0.3",
+    "jotai-cache": "^0.3.0",
+    "jotai-devtools": "^0.3.1",
     "next": "13.2.4",
     "typescript": "5.0.2"
   },
@@ -73,6 +77,7 @@
     "prettier-plugin-tailwindcss": "^0.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redux": "^4.2.1",
     "require-from-string": "^2.0.2",
     "storybook-addon-next-router": "^4.0.2",
     "tailwindcss": "^3.2.7",
