--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jotai-cache": "^0.3.0",
     "jotai-devtools": "^0.3.1",
     "next": "13.2.4",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
