--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jotai": "^2.0.3",
     "jotai-cache": "^0.3.0",
     "jotai-devtools": "^0.3.1",
+    "lucide-react": "^0.127.0",
     "next": "13.2.4",
     "typescript": "5.0.2",
     "zod": "^3.21.4"
